[package]
name = "undergrowth"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gl = "0.14.0"
glutin = "0.31.3"
glutin-winit = "0.4.2"
image = "0.24.9"
nalgebra-glm = "0.18.0"
noise = "0.8.2"
rand = { version = "0.8.5", features = ["small_rng"] }
rand_distr = "0.4.3"
tobj = "4.0.1"
winit = "0.29.13"
